<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_imc"
            android:icon="@drawable/ic_menu_imc"
            android:title="@string/txtImc" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_menu_calculadora"
            android:title="@string/txtCalculadora" />

    </group>

    <item android:title="@string/txtConversores">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_medida"
                    android:icon="@drawable/ic_menu_medida"
                    android:title="@string/txtMedida" />
                <item
                    android:id="@+id/nav_peso"
                    android:icon="@drawable/ic_menu_peso"
                    android:title="@string/txtPeso" />
                <item
                    android:id="@+id/nav_temperatura"
                    android:icon="@drawable/ic_menu_temperatura"
                    android:title="@string/txtTemperatura" />
            </group>
        </menu>
    </item>

</menu>